<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:mContext=".Activities.LoginActivity"
    android:background="@drawable/auth"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:src="@drawable/u"
                android:layout_marginTop="80dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uc_description"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:maxWidth="@dimen/uc_description_dimension"
                android:gravity="center"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="#00ffffff"
                android:textColorHint="#ffffff"
                android:layout_marginTop="100dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:popupBackground="#ffffff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="#00ffffff"
                android:textColorHint="#ffffff">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/color_uc_ListText"
                    android:background="@drawable/round_button_white"
                    android:layout_gravity="start" />

                <Button
                    android:id="@+id/forgot_pass_button"
                    style="?android:textAppearanceSmall"
                    android:textAllCaps="false"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_pass"
                    android:textStyle="bold"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
